# verifiable-tetris

./: .gitignore  Cargo.toml  README.md  index.html
.github/workflows/: build.yml
example/fibonacci-program/: Cargo.toml  build.rs
example/fibonacci-program/src/: main.rs
example/json/: fibonacci_groth16_proof.json  fibonacci_plonk_proof.json
example/script/: Cargo.toml  build.rs
example/script/src/: main.rs
example/wasm_example/: main.js  package.json
verifier/: Cargo.toml
verifier/src/: lib.rs
