[workspace]
members = ["verifier", "example/fibonacci-program", "example/script"]

resolver = "2"

[workspace.dependencies]
sp1-verifier = { git = "https://github.com/succinctlabs/sp1.git", rev = "v0.4.0" }
sp1-zkvm = { git = "https://github.com/succinctlabs/sp1.git", rev = "v0.4.0" }
sp1-build = { git = "https://github.com/succinctlabs/sp1.git", rev = "v0.4.0" }
