[workspace]
members = ["verifier", "example/fibonacci-program", "example/script"]

resolver = "2"

[workspace.dependencies]
sp1-verifier = { git = "https://github.com/succinctlabs/sp1.git", tag = "v4.1.2", default-features = false }
sp1-zkvm = { git = "https://github.com/succinctlabs/sp1.git", tag = "v4.1.2", default-features = false, features = ["network"] }
sp1-build = { git = "https://github.com/succinctlabs/sp1.git", tag = "v4.1.2" }
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git", tag = "v4.1.2", default-features = false, features = ["network"] }
