[package]
name = "tetris-verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git", tag = "v4.1.2" }
sp1-verifier = { git = "https://github.com/succinctlabs/sp1.git", tag = "v4.1.2", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
hex = "0.4.0"

[lib]
crate-type = ["cdylib"]
