[package]
name = "tetris-verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git", tag = "v4.1.2", default-features = false, features = ["network", "wasm"] }
sp1-verifier = { git = "https://github.com/succinctlabs/sp1.git", tag = "v4.1.2", default-features = false, features = ["wasm"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
hex = "0.4.0"
getrandom = { version = "0.2.15", features = ["js"] }

[lib]
crate-type = ["cdylib"]

[target.wasm32-unknown-unknown.dependencies]
wasm-bindgen = "0.2"
getrandom = { version = "0.2.15", features = ["js"] }

[features]
default = ["network", "wasm"]
network = ["sp1-sdk/network"]
wasm = ["sp1-sdk/wasm", "sp1-verifier/wasm"]
