[package]
name = "tetris-program"
version = "0.1.0"
edition = "2021"

[dependencies]
sp1-zkvm = { git = "https://github.com/succinctlabs/sp1.git", tag = "v4.1.2", default-features = false, features = ["bump", "lib"] }
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
vergen = { version = "8", default-features = false, features = ["build", "git", "git2"] }


[features]
wasm = [] 

